# cs2-replay-tool

./: .gitignore  CMakeLists.txt  README.md
data/: player_data_test.json
src/: main.cpp
src/analysis/: Demo.cpp  Demo.hpp  Player.cpp  Player.hpp  Round.cpp  Round.hpp  main.cpp  test.cpp
src/parser/: go.mod  go.sum  main.go
src/renderer/: Render.cpp  Render.hpp
